--- a/reksa.html
+++ b/reksa.html
@@ -264,10 +264,10 @@
     <div class="section">
       <h2>Galeri Foto</h2>
       <div class="gallery">
-        <img src="C:\Users\Administrator\Pictures\pic/i.jpg" alt="Servis HP">
-        <img src="C:\Users\Administrator\Pictures\pic/p.jpg" alt="Teknisi handal">
-        <img src="C:\Users\Administrator\Pictures\pic/o.jpg" alt="Proses perbaikan">
-        <img src="C:\Users\Administrator\Pictures\pic/perbaikan.jpg"alt="Layanan cepat">
+        <img src="i.jpg" alt="Servis HP">
+        <img src="p.jpg" alt="Teknisi handal">
+        <img src="o.jpg" alt="Proses perbaikan">
+        <img src="perbaikan.jpg"alt="Layanan cepat">
       </div>
     </div>
   </div>
